<resources>
    <string name="app_name">CA2_117761489</string>
    <string name="current_staff">Current Staff</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="view_all">View All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="textview">TextView</string>
    <string name="id">ID</string>
    <string name="current">Current?</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="on_off">on/off</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="welcome_to_staff_app">Welcome to Staff App</string>
    <string name="settings">Settings</string>
</resources>